# SNORE

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Justfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
.hooks/: pre-commit
data/guidelines/images/: IMAGES.md
docs/: apnea_detection_reference.md
docs/manufacturers/: resmed.md
docs/references/: README.md
script/: code_quality.sh  extract_pdf_images.py  run_tests.sh
src/oscar_mcp/: __init__.py  __main__.py  cli.py  config.py  constants.py  server.py
src/oscar_mcp/analysis/: calculations.py  events.py  reconciliation.py  service.py  summaries.py
src/oscar_mcp/analysis/algorithms/: __init__.py  breath_segmenter.py  event_detector.py  flow_limitation.py  pattern_detector.py
src/oscar_mcp/analysis/data/: waveform_loader.py
src/oscar_mcp/analysis/engines/: programmatic_engine.py
src/oscar_mcp/analysis/llm/: prompt_manager.py
src/oscar_mcp/database/: __init__.py  day_manager.py  importers.py  models.py  session.py  types.py
src/oscar_mcp/database/migrations/: env.py
src/oscar_mcp/importers/: oscar_import.py
src/oscar_mcp/knowledge/: patterns.py
src/oscar_mcp/models/: day.py  machine.py  session.py
src/oscar_mcp/parsers/: base.py  compression.py  discovery.py  oscar_events.py  oscar_format.py  oscar_summary.py  register_all.py  registry.py  resmed_edf.py
src/oscar_mcp/parsers/formats/: edf.py
src/oscar_mcp/utils/: config_validator.py  formatting.py  validation.py
src/snore/: __init__.py  __main__.py  cli.py  completions.py  config.py  constants.py  logging_config.py  server.py  types.py
src/snore/analysis/: calculations.py  events.py  service.py  summaries.py  types.py  utils.py
src/snore/analysis/algorithms/: __init__.py  breath_segmenter.py  event_detector.py  feature_extractors.py  flow_limitation.py  pattern_detector.py
src/snore/analysis/data/: __init__.py  waveform_loader.py
src/snore/analysis/engines/: __init__.py  programmatic_engine.py  types.py
src/snore/analysis/modes/: __init__.py  aasm.py  aasm_relaxed.py  base.py  config.py  detector.py  types.py
src/snore/analysis/shared/: __init__.py  breath_segmenter.py  event_detector.py  feature_extractors.py  flow_limitation.py  pattern_detector.py  types.py
src/snore/bootstrap/: __init__.py  installer.py  updater.py  version.py
src/snore/database/: __init__.py  day_manager.py  importers.py  models.py  schema.sql  session.py  types.py
src/snore/database/migrations/: env.py
src/snore/importers/: oscar_import.py
src/snore/models/: analysis.py  day.py  machine.py  profile.py  session.py  statistics.py  unified.py
src/snore/parsers/: base.py  compression.py  discovery.py  oscar_events.py  oscar_format.py  oscar_summary.py  qdatastream.py  register_all.py  registry.py  resmed_edf.py  types.py
src/snore/parsers/formats/: edf.py  types.py
src/snore/utils/: formatting.py  validation.py
src/snore/validation/: __init__.py  batch.py  report.py
src/snore/waveform/: __init__.py  inspector.py  renderer.py
tests/: conftest.py  test_day_manager.py  test_discovery.py  test_import_pipeline.py  test_registry_multi_detection.py  test_resmed_smart_detection.py  test_validation.py
tests/fixtures/device_data/resmed/: Identification.json  STR.edf
tests/fixtures/recorded_sessions/20250110/: 20250110_000706_CSL.edf  20250110_000706_EVE.edf  20250110_000715_BRP.edf  20250110_000715_PLD.edf  20250110_000715_SA2.edf
tests/fixtures/recorded_sessions/20250808/: 20250808_010203_CSL.edf  20250808_010203_EVE.edf  20250808_010210_BRP.edf  20250808_010210_PLD.edf  20250808_010210_SA2.edf
tests/fixtures/recorded_sessions/20250910/: 20250910_223609_CSL.edf  20250910_223617_BRP.edf  20250910_223617_PLD.edf  20250910_223617_SA2.edf  20250910_232614_CSL.edf  20250910_232623_BRP.edf  20250910_232623_PLD.edf  20250910_232623_SA2.edf  20250911_014851_EVE.edf  20250911_014900_BRP.edf  20250911_014900_PLD.edf  20250911_014900_SA2.edf  20250911_023020_EVE.edf  (+3 more)
tests/helpers/: __init__.py  fixtures_loader.py  synthetic_data.py  validation_helpers.py
tests/integration/: conftest.py  test_cli_commands.py  test_database_constraints.py  test_day_linking.py  test_import_pipeline.py  test_parsers.py  test_pipeline.py  test_recorded_breath_segmentation.py  test_recorded_event_detection.py
tests/unit/: conftest.py  test_breath_algorithms.py  test_breath_metrics.py  test_breath_segmentation.py  test_completions.py  test_day_manager.py  test_discovery.py  test_event_detector.py  test_feature_extraction.py  test_flow_limitation.py  test_pattern_detector.py  test_programmatic_engine.py  test_registry.py  test_validation.py  test_waveform_loading.py
(+20 files in other folders)
