[project]
name = "oscar-mcp"
version = "0.1.0"
description = "MCP server for analyzing and inspecting OSCAR CPAP/APAP therapy data"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "OSCAR-MCP Contributors" }
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "click>=8.1.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "requests>=2.32.3",
    "pyedflib>=0.1.30",
    "numpy>=1.24.0",
    "mne>=1.6.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pathspec>=0.12.1",
    "pytokens>=0.2.0",
    "ruff>=0.14.2",
    "jinja2>=3.1.6",
    "scipy>=1.16.3",
    "datetime>=5.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
oscar-mcp-server = "oscar_mcp.__main__:main"
oscar-mcp = "oscar_mcp.cli:main"
oscar-import = "oscar_mcp.importers.oscar_import:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oscar_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=oscar_mcp --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "oscar_mcp.analysis.algorithms.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "oscar_mcp.analysis.engines.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
warn_return_any = false
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest-xdist>=3.8.0",
    "scipy-stubs>=1.16.3.0",
]
