[project]
name = "snore"
version = "0.1.0"
description = "MCP server for analyzing and inspecting OSCAR CPAP/APAP therapy data"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "SNORE Contributors" }
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "click>=8.1.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "requests>=2.32.3",
    "pyedflib>=0.1.30",
    "numpy>=1.24.0",
    "mne>=1.6.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pathspec>=0.12.1",
    "pytokens>=0.2.0",
    "ruff>=0.14.2",
    "jinja2>=3.1.6",
    "scipy>=1.16.3",
    "datetime>=5.5",
    "tomli-w>=1.0.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.18.2",
]

[project.scripts]
snore-server = "snore.__main__:main"
snore = "snore.cli:main"
snore-import = "snore.importers.oscar_import:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=snore --cov-report=term-missing"
markers = [
    "unit: marks tests as unit tests (run in parallel)",
    "integration: marks tests as integration tests (run sequentially)",
    "completions: marks tests for shell completion functionality",
]

[tool.ruff.lint]
select = ["I", "F", "UP", "B"]  # isort, pyflakes, pyupgrade, bugbear

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
strict = true

[[tool.mypy.overrides]]
module = ["numpy.*", "scipy.*", "mne.*", "pyedflib.*", "mcp.*", "fitz.*"]
ignore_missing_imports = true  # Only for external libs without stubs

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["var-annotated", "type-arg", "union-attr", "assignment", "operator", "index", "attr-defined", "arg-type", "no-any-return"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest-xdist>=3.8.0",
    "scipy-stubs>=1.16.3.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
